test/program.mj
program MJProgram
    // ime ne postoji u tabeli simbola
    // inat x;
    // ime ne postoji u tabeli simbola, ali ime nije tip
	// MJProgram x;
	// const int x = 'a';
	// const int y = true;
	// const int z = 3;
	// const int xx = 'a', yy = 'b', zz = 3;
	// const char a = false, b = 2, c = 'c';
	const char ch = 'c';
	char x, y[];
	const bool m = false;
	const int g = 11;

{
	void main() int a, b[]; int x[], y; char eol; {
        // a = b; // error
        // a = 3 + b; // error
        // a = 3 + b*2; // error
        // a = 3 + b[2]*2; // ok
        // g = 3; // error
        // a = 3; // ok
        // x = new int[4]; // ok
        // x[2] = a; // ok
        // x = a; // ok
        // x[3]  = x[4]; // ok
        // x = null; // ok

        // x++; // error
        // x[2]--; // ok
        // g--; // error
        // a++; // ok
        // eol++; // error

        // read(a); // ok
        // read(eol); // ok
        // read(x); // error
        // read(x[2]); // ok
	}

    // bool m1(int param1, int param2) int m, b[]; int x[], y; {

    // }

    // char m2() int m, b[]; int x[], y; {

    // }

}